# shibafes2023-visitors-counter

./: LICENSE  README.md
pico/: CMakeLists.txt  README.md  seven-segment-display.c  writer.sh
pico/doc/: setup-c.md  setup.md  wiring-diagram.md
pico/src/: 7segment.py  CMakeLists.txt  test.c  writer.sh
pico/src/GPIOtest/: CMakeLists.txt  GPIOtest.c
pico/src/seven-segment-display/: CMakeLists.txt  seven-segment-display.c
